# metric

./: .gitignore  README.md  README.rst  config_SAMBA_ORCA0083-N06.ini  pyproject.toml  requirements.txt  run_metric.py  setup.py
configs/: config_RAPID_ORCA0083-N06.ini
configs/NEMO/: config.move.ORCA0083-N06.ini  config.rapid.ORCA0083-N06.ini
configs/NEMO/NOC-NPD/eORCA025/: config_MOVE_eORCA025.ini  config_RAPID_eORCA025.ini  config_SAMBA_eORCA025.ini  run_metric.py  run_metric_MOVE_eORCA025_ERA5v1.slurm  run_metric_RAPID_eORCA025_ERA5v1.slurm  run_metric_SAMBA_eORCA025_ERA5v1.slurm
configs/NEMO/NOC-NPD/eORCA1/: config_MOVE_eORCA1.ini  config_RAPID_eORCA1.ini  config_SAMBA_eORCA1.ini  run_metric_MOVE_eORCA1_ERA5_v1.slurm  run_metric_RAPID_eORCA1_ERA5_v1.slurm  run_metric_SAMBA_eORCA1_ERA5_v1.slurm
configs/NEMO/NOC-NPD/eORCA12/archer2/: config_MOVE_eORCA12.ini  config_RAPID_eORCA12.ini  config_SAMBA_eORCA12.ini  run_metric_MOVE_eORCA12_ERA5v1.slurm  run_metric_RAPID_eORCA12_ERA5v1.slurm  run_metric_SAMBA_eORCA12_ERA5v1.slurm
configs/NEMO/NOC-NPD/eORCA12/jasmin/: config_MOVE_eORCA12.ini  config_RAPID_eORCA12.ini  config_SAMBA_eORCA12.ini  run_concat_metric_eORCA12_ERA5v1.sh  run_metric_MOVE_eORCA12_ERA5v1.slurm  run_metric_RAPID_eORCA12_ERA5v1.slurm  run_metric_SAMBA_eORCA12_ERA5v1.slurm
configs/POP/: config.rapid.g.e20.G.TL319_t13.control.001
configs/npd/eORCA025/: config_MOVE_eORCA025.ini  config_RAPID_eORCA025.ini  config_SAMBA_eORCA025.ini  run_metric_MOVE_eORCA025.sh  run_metric_RAPID_eORCA025.sh  run_metric_RAPID_eORCA025_ERA5v0.sh  run_metric_SAMBA_eORCA025.sh
configs/npd/eORCA025/links/: create_eORCA025_ERA5_1m_links.sh
configs/npd/eORCA1/: config_MOVE_eORCA1.ini  config_RAPID_eORCA1.ini  config_SAMBA_eORCA1.ini  run_metric_MOVE_eORCA1.sh  run_metric_MOVE_eORCA1_ERA5_v1.slurm  run_metric_RAPID_eORCA1.sh  run_metric_RAPID_eORCA1_ERA5_v1.slurm  run_metric_SAMBA_eORCA1.sh  run_metric_SAMBA_eORCA1_ERA5_v1.slurm
metric/: __init__.py  geostrophy.py  metric.py  sections.py  utils.py
metric/cli/: __init__.py  argument_parser.py  main_cli.py
metric/move/: __init__.py  observations.py  output.py  plotdiag.py  transports.py
metric/rapid/: observations.py  output.py  plotdiag.py  transports.py  validation.py
metric/samba/: __init__.py  observations.py  output.py  plotdiag.py  transports.py
