[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools]
packages = ["metric"]

[project]
name = "metric"
description = "METRIC is a fork of the RapidMoc package, which extends the calculation of observation-style transports to other observing arrays."
requires-python = ">=3.10"
keywords = ["AMOC", "oceanography", "modelling", "analysis", "data"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "argparse",
  "ConfigParser",
  "scipy",
  "matplotlib",
  "netcdf4",
  "dask[complete]>=2024.10.0",
  "gsw>=3.6.19",
  "h5netcdf>=1.4.0",
  "xarray[io,accel,viz]>=2024.10.0",
  "numpy>=1.26.4",
  "zarr>=2.18.3",
  ]

dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/rst"

[project.license]
file = "LICENSE.txt"
content-type = "text/txt"

[project.urls]
repository = "https://github.com/oj-tooth/metric"
