[project]
name = "metric"
description = "Meridional ovErTurning ciRculation diagnostIC (METRIC) package for calculating observational-equivalent AMOC diagnostics in ocean general circulation models."
keywords = ["AMOC", "oceanography", "modelling", "analysis", "data"]
readme = "README.md"
dynamic = ["version"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}, {email = "fredc@ucar.edu"}, {name = "Fred Castruccio"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "aiohttp",
  "argparse",
  "ConfigParser",
  "dask[complete]>=2024.10.0",
  "fpdf2",
  "gsw>=3.6.19",
  "h5netcdf>=1.4.0",
  "matplotlib",
  "netcdf4",
  "requests",
  "numpy>=1.26.4",
  "scipy",
  "xarray[accel]>=2024.10.0",
  "zarr>=2.18.3",
  ]

[project.urls]
Home = "https://github.com/AMOCcommunity/metric"

[tool.setuptools.dynamic]
version = {attr = "metric.__init__.__version__"}

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm>=7"]

[tool.setuptools]
packages = ["metric"]

[project.scripts]
metric = "metric.cli.main_cli:metric"
